# Sales-assist-agenticai

./: .gitignore  README.md  competitive_evaluator.py  hello.py  pyproject.toml  quickstart.py  requirements.txt  sales-multi.json  simple_evaluator.py  test_competitive.py
plans/Guaranteed_income/: HDFC_Guarnteed_income.md  Kotak_guaranteed_income.md  axis_guaranteed_income.md
plans/Savings/: .HDFC-Life-Guaranteed-Savings-Plan_Brochure.md  Axis_savings.md  kotak_assured_savings.md
